--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Gallery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
     <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<form>
+    <input type="text" name="search" id="text-input" required placeholder="Search images...">
+    <button type="submit">Search</button>
+</form>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+<div class="gallery">
 
-    <script type="module" src="./main.js"></script>
+</div>
+<button type="button" class="is-hidden load-btn">Load more</button>
+
+<span class="loader is-hidden"></span>
+
+</section>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
